# LightLogger

./: CMakeLists.txt  CameraInterface.h  LICENSE.txt  Logger.cpp  Logger.h  OpenNI2Interface.cpp  OpenNI2Interface.h  README.md  RealSenseInterface.cpp  RealSenseInterface.h  main.cpp
cmake/: FindOpenNI2.cmake  FindRealSense.cmake
